Adding xml resources

--- a/Design-Patterns/Properties/Resources.resx
+++ b/Design-Patterns/Properties/Resources.resx
@@ -124,4 +124,10 @@
   <data name="CsvRenovations" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tests\creational\resources\renovations.csv;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="XmlMachines" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tests\creational\resources\machines.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="XmlRenovations" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tests\creational\resources\renovations.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
